# node2vec-surprises

./: LICENSE.md  README.md  pyproject.toml
node2vec_surprises/: Makefile  gallery.py  graphs.py  make_adjacency_matrix.py  metrics.py  node2vec.py  random_embedding.py  random_walks.py  uniform_cube.py  wasserstein.py  wasserstein_test.py
notebooks/: Mantel_test.ipynb  PH_distance.ipynb  PointCloud_Distance_distributions.ipynb  SBM_models.ipynb  Total_persistence.ipynb  dcov.ipynb
rawos/: analyse_results.py  distance_correlations.py  gallery.py  graphs.py  make_adjacency_matrix.py  metrics.py  node2vec.py  random_embedding.py  random_walks.py  total_persistence.py  wasserstein.py  wasserstein_test.py
results/: er-c10-d16-l10-n10-p0_25-1d4a33ae88644d2783e91bb1345a3186.tsv  er-c10-d16-l10-n10-p0_25-640c81e03772437f840711442c1e7e33.tsv  er-c10-d16-l10-n10-p0_25-7dea59045765401d9438559b3509da86.tsv  er-c10-d16-l10-n10-p0_25-866ddc3b5dd64d788424ddf39022c7b2.tsv  er-c10-d16-l10-n10-p0_25-fbd757be62774f4293a112385ff5ecb9.tsv  er-c10-d16-l10-n10-p0_25-keep-0e3ae756c0d3461db584fe8adf1d3e88.tsv  er-c10-d16-l10-n10-p0_25-keep-1d91ed9abea74e15b6bd5dd5d867a35f.tsv  er-c10-d16-l10-n10-p0_25-keep-1fef9011c8b442529f743489ab3af319.tsv  er-c10-d16-l10-n10-p0_25-keep-6014de583d9c4a8883b9944634ef6485.tsv  er-c10-d16-l10-n10-p0_25-keep-74de12c6d0cb4f06a2a033f5c2f6dbbb.tsv  er-c10-d16-l10-n10-p0_25-keep-ae8d47f2e7aa40c69a9818db8463085c.tsv  er-c10-d16-l10-n10-p0_30-keep-17220e967cce4997b2a4f078757e72bf.tsv  er-c10-d16-l10-n10-p0_30-keep-2a7830068cb643f68d767e396e432b0d.tsv  (+294 more)
(+1261 files in other folders)
