[tool.poetry]
name = "RAWOS"
version = "0.1.0"
description = ""
authors = ["Bastian Rieck <bastian@rieck.me>"]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"
networkx = "^2.6.3"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
