[tool.poetry]
name = "RAWOS"
version = "0.1.0"
description = ""
authors = ["Bastian Rieck <bastian@rieck.me>"]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"
networkx = "^2.6.3"
numpy = "^1.21.4"
seaborn = "^0.11.2"
torch = "^1.10.2"
torch-scatter = "^2.0.9"
torch-sparse = "^0.6.12"
torch-cluster = "^1.5.9"
torch-spline-conv = "^1.2.1"
torch-geometric = "^2.0.3"
pytorch-lightning = "^1.5.10"
scikit-learn = "^1.0.2"
dcov = {git = "https://github.com/Pseudomanifold/dcov"}
POT = "^0.8.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
